# autorag-live

./: .coverage.SAINJU.18203.XyzBwaQx  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AGENTIC_RAG_IMPLEMENTATION.md  BENCHMARKS_V2.md  CODE_CRITIQUE_AND_RECOMMENDATIONS.md  CONTRIBUTING.md  Dockerfile  EFFICIENCY_OPTIMIZATION_REPORT.md  FRESH_START_SESSION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  Makefile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_NOTES_V2.md  OPTIMIZATION_PLAN_V2.md  OPTIMIZATION_REPORT_V3.md  OPTIMIZATION_SPRINT_COMPLETE.md  OPTIMIZATION_SUMMARY_COMMITS.md  PROJECT_CRITIQUE_AGENTIC_RAG.md  PROJECT_CRITIQUE_MODULAR_AGENTIC_RAG.md  PROJECT_CRITIQUE_PLAN.md  PROJECT_CRITIQUE_V2.md  PROJECT_CRITIQUE_V3.md  PROJECT_CRITIQUE_V4.md  QUICK_COMMIT_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  best_runs.json  coverage.xml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  terms.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml  security.yml
app/: streamlit_app.py
autorag_live/: __init__.py  cli.py
autorag_live/agent/: __init__.py  adaptive_rag.py  advanced_memory.py  advanced_reasoning.py  async_executor.py  async_pipeline.py  base.py  chain_of_verification.py  constitutional_critic.py  context_manager.py  context_window.py  conversation.py  dsl.py  flare.py  graph_adapters.py  guardrails.py  hitl.py  interleaved.py  lats.py  memory.py  modular_base.py  monitoring.py  multi_hop.py  observations.py  persistent_memory.py  plan_and_execute.py  query_decomposition.py  query_planner.py  query_planner_v2.py  rag_pipeline.py  react.py  react_planner.py  reasoning.py  reflection.py  resilience.py  self_consistency.py  self_rag.py  self_reflection.py  session.py  speculative_drafter.py  (+9 more)
autorag_live/augment/: attributed_qa.py  batch_augmentation.py  chain_of_note.py  citation.py  compression.py  compressor.py  context_knapsack.py  context_ranker.py  few_shot_selector.py  hard_negatives.py  llmlingua.py  query2doc.py  query_expansion.py  query_rewriter.py  query_rewrites.py  query_understanding.py  summarizer.py  synonym_miner.py  synthesis.py
autorag_live/cache/: __init__.py  adaptive_ttl_cache.py  distributed_cache.py  embedding_cache.py  llm_cache.py  production_cache.py  query_cache.py  response_cache.py  semantic_cache.py  token_cost_cache.py  tokenization_cache.py
autorag_live/chunking/: adaptive.py  chunker.py  raptor_tree.py  semantic_chunker.py
autorag_live/cli/: __init__.py  __main__.py  config_migrate.py  main.py  registry.py
autorag_live/config/: advanced_config.py  profiles.py  schema.py  validator.py
autorag_live/core/: __init__.py  adapters.py  agent_policy.py  async_utils.py  checkpoint.py  context.py  di.py  interfaces.py  logging_config.py  metrics_export.py  observability.py  protocols.py  state_graph.py  state_manager.py  token_budget.py  tracing.py  uncertainty.py
autorag_live/data/: chunking.py  document_processor.py  document_store.py  indexer.py  layout_analyzer.py  loaders.py  preprocessor.py  similarity.py  streaming.py  streaming_processor.py  time_series.py
autorag_live/disagreement/: __init__.py  caching.py  metrics.py  report.py
benchmarks/: baseline_benchmark.json  optimized_benchmark.json
config/: config.yaml  dev.yaml
docs/: ADVANCED_BENCHMARKING.md  ASYNC_PATTERNS.md  FINAL_OPTIMIZATION_REPORT.md  MODULARIZATION.md  OBSERVABILITY.md  OPTIMIZATION_SPRINT_SUMMARY.md  ROUTING_GUIDE.md  api-reference.md  api_examples.py  benchmarking-guide.md  changelog.md  cli-reference.md  comprehensive-project-critique.md  config-migration.md  configuration.md  contributing.md  core-concepts.md  dense-retriever-optimizations.md  efficiency-optimization-summary.md  error-handling-guide.md  evaluation.md  index.md  installation.md  migration-guide.md  optimization-summary.md  optimization-v2.md  optimization.md  performance-optimization-guide.md  performance-review.md  project-improvement-plan.md  quickstart.md  retrievers.md  testing.md
notebooks/: disagreement_analysis.ipynb  self_improvement_loop.ipynb
reports/: disagreement_report.html
runs/: small_1757526096.json  small_1757526210.json  small_1757526222.json  small_1757526433.json  small_1757526513.json  small_1758638729.json  small_1759241817.json  small_1759342503.json  small_1759426824.json  small_1759426839.json  small_1759502419.json  small_1759502435.json  small_1759515603.json  small_1759515619.json  small_1759518818.json  small_1759518824.json  small_1759518841.json  small_1759518857.json  small_1759518872.json  small_1759518889.json  small_1759518905.json  small_1759518917.json  small_1759518933.json  small_1759520216.json  small_1759520227.json  small_1759520230.json  small_1759524748.json  small_1759530103.json  small_1759539277.json  small_1759539287.json  small_1759600540.json  small_1759600549.json  small_1759600553.json  small_1759607034.json  small_1759607050.json  small_1759607081.json  small_1759607096.json  small_1759607098.json  small_1759607107.json  small_1759607110.json  (+15 more)
scripts/: dev-setup.py
tests/: conftest.py  test_async_colbert.py  test_async_elasticsearch.py  test_async_faiss.py  test_async_llm_adapter.py  test_async_mmr.py  test_async_qdrant.py  test_async_retriever_adapter.py  test_async_utils.py  test_cache_integration.py  test_checkpoint.py  test_cli.py  test_config_validator.py  test_di.py  test_edge_cases.py  test_edge_cases_extended.py  test_entity_extractor.py  test_graph_adapters.py  test_graph_builder.py  test_guardrails.py  test_hitl.py  test_integration.py  test_integration_harness.py  test_interfaces.py  test_llm_factory.py  test_logging_tracing.py  test_metrics_export.py  test_multi_agent_collaboration.py  test_observability.py  test_property_based.py  test_provider_factory.py  test_rag_context.py  test_retriever_refactoring.py  test_routing.py  test_state_graph.py  test_streaming_pipeline.py  test_streaming_reranker.py
(+291 files in other folders)
