[tool.poetry]
name = "autorag-live"
version = "0.1.0"
description = "A disagreement-driven, self-optimizing RAG system."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.2.2"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "^0.1.0"
mypy = "^0.991"
pre-commit = "^3.0.0"
mkdocs = "^1.4.2"
click = "^8.1.3"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
